syntax = "proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

import "pangu/proto/attribute.proto";

package panguservice;

message AttributeListRequest {
  string query = 1;
  int64 page = 2;
  int64 limit = 3;
  string sort = 5;
  string filter = 6;
  int64 offset = 7;
}

message AttributeListResponse {
  int64 page = 1;
  int64 limit = 2;
  int64 total = 3;
  bool hasNext = 4;
  repeated Attribute data = 6;
}